# langram

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml
bench/benches/: benchmark.rs
src/: bin_storage.rs  file_model.rs  fraction.rs  lib.rs  main.rs  model.rs  ngram_size.rs  ngrams.rs
src/detector/: builder.rs  config.rs  mock_tests.rs  mod.rs  model.rs  storage.rs  tests.rs
tests/: count_languages.rs  detector.rs
train/: Cargo.toml  README.md
train/src/: file_model.rs  fraction.rs  lib.rs  model.rs  training_model.rs  writer.rs
