[package]
name = "langram"
version = "0.7.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Natural language detection library"
documentation = "https://docs.rs/langram/"
repository = "https://github.com/RoDmitry/langram"
categories = ["text-processing"]
keywords = ["language", "detect", "recognise", "process", "nlp"]
include = ["src"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "langram"
path = "src/lib.rs"

[dependencies]
ahash = "0.8"
alphabet_detector = { path = "../alphabet_detector", version = "0.10" }
arraystring = "0.3"
arrayvec = "0.7"
atoi_simd = "0.16"
brotli = "8"
debug_unsafe = { version = "0.1.2", features = ["arraystring"] }
# debug_unsafe = { path = "../debug_unsafe", version = "0.1", features = ["arraystring"] }
fraction = "0.15"
itertools = "0.14"
memmap2 = "0.9"
rkyv = "0.8"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_encom = "0.3"
serde_map = "0.2"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tracing = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1"

[dev-dependencies]
float-cmp = "0.10"
rstest = "0.26"

[profile.dev]
opt-level = 1
